tests/typecheck/should_fail/TyAppPat_TooMany.hs
{-# LANGUAGE TypeAbstractions #-}
{-# LANGUAGE TypeApplications #-}

module TyAppPat_TooMany where

f :: Maybe Int -> Int
f (Just @Int @Bool x) = x
f Nothing = 10
